Add Layer-Choice CSV parsing